web/css/global.css
/* ... */
    /* Tooltip arrow */
    .tooltip .tooltiptext::after {
        content: "";
        position: absolute;
        top: 100%;
        left: 50%;
        margin-left: -5px;
        border-width: 5px;
        border-style: solid;
        border-color: #555 transparent transparent transparent;
    }

    /* Show the tooltip text when you mouse over the tooltip container */
    .tooltip:hover .tooltiptext {
        visibility: visible;
        opacity: 1;
    }



.even-statut-label
{
    padding:0.2em 0.2em;
    background:lightblue;
    color:#4c4c4c;
    border-radius:6px
}

.statut-inactif
{
    color:#fff;
    background:red;
}

.statut-actif
{
    color:#fff;
    background:green;
}

.statut-propose
{
    background:lightblue;
}

.statut-annule
{
    background: rgba(238, 180, 41, .6)
}

.statut-complet
{
    background: rgba(236, 226, 111, .7);
}

.even-icon-status-round
{
    display:inline-block;
    width:12px;
    height:12px;
    border-radius:50%;
}

/* article */

.evenement-short
{
    color:#59787A;
    margin: 0.6em 0 1.4em;
    border-top:1px dotted gray;
    width:100%;
}

    .evenement-short .flyer
    {
        float:left;
        width:100px;
        height:140px;
        background:#efefef;
        overflow:hidden;
        margin-top:6px;
    }

    .evenement-short .titre
    {
        padding: 0.4em 0 0.1em;
        font-size:1em;
        font-weight:bold;
        line-height:1.2em;

        -width:90%;
        /*
        border-bottom:1px solid black;
        */
    }

        .evenement-short .titre .left
        {
            float:left;
            line-height: 1.25em;
            width:58%;
            text-align:left;
            margin:0;
            padding-left:0.1em;
            /*
                    background-color:yellow;
            */
        }

        .evenement-short .titre .left a:visited {
            color:#0f4786; /* #105199 #104d91*/
        }


        .evenement-short .titre .right
        {
            float:right;
            width:40%;
            padding:0;
            padding:0 0.2em 0 0 ;
            text-align:right;
            line-height: 1.25em;
            /*
                background-color:aqua;
            */
        }

        .evenement-short .titre #titre, #nom_lieu
        {
            display:block;
            background-color:#FDD017;
        }


    .evenement-short .description
    {
        min-height:72px;
        padding:0.4em 0 0.4em 0.5em;
        margin:0;
        color:#3e5355;
        font-size:0.9em;
        background-color:#F9F9F9;
        line-height:1.4em;
        overflow:hidden;
    }

        .evenement-short .description p
        {
            margin:0;
        }

        .evenement-short .description .event_orga
        {
            list-style-type:none;
            margin:0.8em 0 0.6em 0;
            padding:0.1em;
            position:relative;
            bottom:0
        }

.event_orga li
{
    margin: 0.3em 0.1em 0.1em 0.1em;
    padding:0.2em;
    display:inline-block;
    background:#efefef;
    border-radius:3px;
}

    .evenement-short .description .event_orga .lien_ext
    {
        font-size: 0.9em;
    }



    .evenement-short .adresse
    {
        background:#E6EDF7;
    }

    .evenement-short .pratique
    {
        background:#E6EDF7;
        font-size:0.8em;
        border:1px solid #eaeaea;
        padding:0.4em 0.2em;
        line-height: 1.3em;
    }

        .evenement-short .pratique .left
        {
            float:left;
            padding:0 0 0 0.2em;
            width:59%;
            text-align:left;
        }

        .evenement-short .pratique .right
        {
            float:right;
            width:39%;
            padding:0 0.2em 0 0;
            text-align:right;
        }

    .evenement-short .edition
    {
        height:1.6em;
        font-size:0.9em;
    }





ul.menu_action
{
    float:left;
    height:1.6em;
    margin:.3em 0 0 0;
    padding: 0;
    display:inline;
}

    ul.menu_action li
    {
        height:1.6em;
        display:inline;
        margin:.8em .3em;
    }

        ul.menu_action li a
        {
            padding:.3em;
        }

        ul.menu_action li a.signaler, ul.menu_action li a.ical,
        ul.menu_action li button.ical
        {
            color:#a6a5a5;
        }

        ul.menu_action li a.signaler:hover, ul.menu_action li a.signaler:active,
        ul.menu_action li a.ical:hover, ul.menu_action li a.ical:active,
        ul.menu_action li button.ical:hover, ul.menu_action li button.ical:active
        {
            color:#1569C7;
        }

        ul.menu_action li img
        {
            vertical-align: middle;
        }

.calendar-export-wrapper
{
    position: relative;
    display: inline-block;
}

.calendar-export-trigger
{
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    font: inherit;
    color: inherit;
}

.calendar-export-menu
{
    position: fixed;
    inset: unset;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 0 4px 12px rgba(0,0,0,.15);
    list-style: none;
    padding: 0;
    margin: 0;
    min-width: 13em;
    text-align: left;
    opacity: 0;
    transform: translateY(-4px);
    transition: opacity .15s ease, transform .15s ease, display .15s allow-discrete;
}

.calendar-export-menu:popover-open
{
    opacity: 1;
    transform: translateY(0);
}

@starting-style
{
    .calendar-export-menu:popover-open
    {
        opacity: 0;
        transform: translateY(-4px);
    }
}

.calendar-export-wrapper ul.calendar-export-menu li
{
    display: block;
    margin: 0;
    padding: 0;
    height: auto;
    width: auto;
    line-height: 1;
}

.calendar-export-wrapper ul.calendar-export-menu li a
{
    display: block;
    padding: 0.9em 1.2em;
    white-space: nowrap;
    text-decoration: none;
}

.calendar-export-wrapper ul.calendar-export-menu li a:hover
{
    background: #f0f0f0;
}
/* ... */

